--- a/app/src/main/res/layout/activity_rain.xml
+++ b/app/src/main/res/layout/activity_rain.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tab="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/black"
+    android:background="@color/dark_blue"
     tools:context=".RainActivity">
 
     <RelativeLayout
@@ -15,39 +16,43 @@
             android:layout_height="wrap_content"
             android:layout_alignParentTop="true"
             android:layout_centerInParent="true"
-            android:layout_marginTop="60dp"
+            android:layout_marginTop="90dp"
             android:gravity="center">
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:gravity="center"
-                android:lineSpacingExtra="7sp"
+                android:lineSpacingExtra="10sp"
                 android:text="@string/rain_poetry"
                 android:textColor="@color/berry_blue"
-                android:textSize="12sp" />
+                android:textSize="14sp" />
         </LinearLayout>
 
         <LinearLayout
+            android:id="@+id/activity_main_bottom_layout"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
             android:orientation="vertical">
 
             <com.astuetz.PagerSlidingTabStrip
                 android:id="@+id/activity_main_tab"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:background="#fafafa"
-                android:paddingBottom="10dp"
+                android:layout_width="wrap_content"
+                android:layout_height="2dp"
+                android:layout_gravity="center_horizontal"
+                android:background="@color/dark_blue"
+                android:paddingBottom="2dp"
                 android:paddingTop="10dp"
-                android:textColor="#333333"
-                android:textSize="13sp" />
+                android:textSize="1sp"
+                tab:pstsDividerColor="@color/cyan"
+                tab:pstsIndicatorHeight="2dp" />
 
             <android.support.v4.view.ViewPager
                 android:id="@+id/activity_main_view_pager"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_alignParentBottom="true">
+                android:layout_height="wrap_content"
+                android:overScrollMode="never">
 
             </android.support.v4.view.ViewPager>
         </LinearLayout>
@@ -56,5 +61,8 @@
     <com.love.rain.view.SimplePanel
         android:id="@+id/activity_main_panel_layout"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"></com.love.rain.view.SimplePanel>
+        android:layout_height="match_parent"
+        android:visibility="visible">
+
+    </com.love.rain.view.SimplePanel>
 </FrameLayout>
