引入第三方动画库LoadingDrawable，增加应用趣味性； 控制RecyclerView的点击播放音频和音频职期间的切换； 写入自定义view-滚轮选择器，用于选择定时停止播放时间。

--- a/app/src/main/res/layout/fragment_front_panel.xml
+++ b/app/src/main/res/layout/fragment_front_panel.xml
@@ -17,6 +17,14 @@
         android:layout_height="wrap_content"
         android:text="Stop" />
 
+    <TextView
+        android:id="@+id/fragment_front_panel_txt"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:textColor="@color/dark_blue"
+        android:textSize="20sp" />
+
     <ImageView
         android:id="@+id/fragment_front_panel_guide_img"
         android:layout_width="100dp"
@@ -24,4 +32,5 @@
         android:layout_gravity="center"
         android:layout_margin="50dp"
         android:src="@drawable/status_bar_pause_img" />
+
 </LinearLayout>
